FIX: init_admin.sh script and multiple api errors
